# koopmans

./: .coveragerc  .gitignore  .gitmodules  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README_pypi.rst  codecov.yml  conftest.py  cpidiff.py  kc-calc.json  ki.py  kipz.py  koopmans.py  koopmans_utils.py  pyproject.toml  pytest.ini  setup.py  system.json
.github/: codecov.yml
.github/workflows/: ci.yml  docs.yml  flake8.yml  make.yml  make_qe4.yml  make_qe6.yml  pylint.yml  release.yml  tests.yml  tutorials.yml  typechecking.yml  update_citation.yml
CP-Koopmans/: config.status  make.sys
CP-Koopmans/CPV/: atoms_type_module.mod  betax.mod  cg_empty_sub.f90  cglib.f90  chi2.mod  cp_interfaces.f90  cp_interfaces.mod  cp_version.mod  cprsub.f90  dqrad_mod.mod  eelib.f90  eelib.old  efcalc.mod  electric_field_module.mod  ensemble_dft.mod  hfmod.mod  inner_loop.f90  inner_loop_smear.f90  input.f90  io_pot_sic_xml.mod  kohn_sham_states.mod  ldau.mod  modules.f90  nksiclib.f90  nlcc.f90  odd_alpha.f90_bk  ortho.f90  polarization.mod  pres_ai_mod.mod  pseudopotential.mod  qgb_mod.mod  qradb_mod.mod  read_pseudo_module_fpmd.mod  spherical_harmonics.mod  vanderwaals.mod  wannier_module.mod  wannier_subroutines.mod  wave_types.mod  what_to_do.txt  write_hamiltonian.f90
CP-Koopmans/Modules/: .cvsignore  Makefile  atom.mod  autopilot.mod  basic_algebra_routines.mod  cell_base.mod  constraints_module.mod  control_flags.f90  control_flags.mod  descriptors.mod  dspev_module.mod  electrons_nose.mod  energies.f90  energies.mod  error_handler.mod  fft_scalar.mod  funct.mod  grid_subroutines.mod  gvecb.mod  gvecs.mod  input_parameters.mod  ions_base.mod  ions_nose.mod  kinds.mod  metadyn_vars.mod  mp.mod  mytime.mod  parallel_toolkit.mod  parallel_types.mod  parser.mod  path_io_routines.mod  path_variables.mod  paw_variables.mod  pseudo_types.mod  radial_grids.mod  random_numbers.mod  read_cards_module.mod  read_namelists_module.mod  read_upf_v1_module.mod  read_upf_v2_module.mod  (+13 more)
CP-Koopmans/flib/: Makefile  transto.f90
CP-Koopmans/iotk/: CHANGES  OPTIONS
CP-koopmans/: Makefile
CP-koopmans/CPV/: cdvan.mod  cp_autopilot.mod  cp_electronic_mass.mod  cp_restart_backup.f90  cppp.x  cpver.h  dqgb_mod.mod  efield_mod.mod  efield_module.mod  environment.mod  hflib.f90  ions_positions.mod  local_pseudo.mod  problem_size.mod  qmatrixd.f90  splines.mod  step_constraint.mod  stress_param.mod  turbo.mod  wannier_base.mod  wave_init_wannier.f90
CP-koopmans/Modules/: berry_phase.mod  constants.mod  electrons_base.mod  global_version.mod  grid_dimensions.mod  gvecp.mod  io_files.mod  io_global.mod  metadyn_io.mod  mp_global.mod  mp_wave.mod  parameters.mod  path_base.mod  path_opt_routines.mod  path_reparametrisation.mod  read_upf_v2.f90  read_uspp_module.mod  recvecs_indexes.mod  smooth_grid_dimensions.mod  task_groups.mod  time_step.mod  upf_module.mod  wannier.mod  wavefunctions_module.mod  wrappers.mod  xml_io_base.mod
CVSROOT/: modules
Yannick_tests/: simple_water.json  simple_water.xyz  water.bib  water.json  water_traj.xyz
Yannick_tests/TMP-CP/: kc.cel  kc.eig  kc.evp  kc.nos  kc.pos  kc.vel
Yannick_tests/calc_alpha/: ki.cpi  ki.cpo  ki.ham.pkl
Yannick_tests/final/: ki_final.bare_ham.pkl  ki_final.cpi  ki_final.cpo  ki_final.ham.pkl
Yannick_tests/init/: dft_dummy.cpi  dft_dummy.cpo  dft_init.cpi  dft_init.cpo  simple_water_bandstructure.fig.pkl
Yannick_tests/simple_water/: simple_water.bib  simple_water.json
cp_koopmans/: .gitignore  Makefile  make.sys.intel
cp_koopmans/CPV/: Makefile  centers_and_spreads.f90  cg_empty_sub.f90  cg_module.mod  cg_sub.f90  charge_mix.mod  core.mod  cp_interfaces.f90  cp_main_variables.mod  cp_restart.mod  cvan.mod  dener.mod  eecp_mod.mod  electrons.f90  electrons_module.mod  emptystates.f90  exx_divergence.f90  init.f90  init_run.f90  input.mod  make.depend  metagga.mod  nksic.mod  ortho_check.f90  orthogonalize_base.mod  path_routines.mod  pseudo_base.mod  symm_wannier.f90  tune.mod  util.mod  wave_init.mod
docs/: README.rst  about.rst  conf.py  contact.rst  index.rst  input_file.rst  installation.rst  koopmans_readme.rst  license.rst  links.rst  modules.rst  quick_start.rst  references.rst  refs.bib  requirements.txt  running.rst  support.rst  theory.rst  tutorials.rst
docs/running/: kcp.rst  (+7 more)
espresso-4.1-nk-para/: .cvsignore  .gitignore  ChangeLog  Makefile  TODO  cl2html.pl  config.status  configure.msg  cvs2cl.pl  make.sys  make.sys.serial
espresso-4.1-nk-para_solids/: Makefile  TODO  cl2html.pl  make.sys.intel  make2.sys
espresso-6.5-cp-4.1-solids/: .gitignore  Makefile  configure
example/: README.md  h2o-template.cpi  h2o.json
examples/: .gitignore  README
koopmans/: .pseudopotentials.py.swp  __init__.py  ase.py  bands.py  calc.py  cell.py  commands.py  config.py  defaults.py  io.py  kpoints.py  mpl_config.py  projections.py  pseudopotentials.py  qei_to_json.py  references.py  settings.py  utils.py  workflow.py
koopmans_cp/: ase.py  calc.py  defaults.py  environ.py  io.py  utils.py  workflow.py
pseudos/: Ti_ONCV_PBE-1.0.upf  generate_wfc_psps.py  pseudo_dojo_standard  sg15  sssp_efficiency  sssp_precision
qe-4.1-koopmans/: .cvsignore  .gitignore  Makefile
qe-6.5-cp-4.1-solids/: .gitignore  Makefile
requirements/: requirements.txt  test_requirements.txt
scripts/: cat_workflow_io.sh  cpi_to_json.py  qe_diff
tests/: .gitignore  Makefile  README.md  README.rst  __init__.py  benchmarks.json  conftest.py  construct_benchmarks.py  jobconfig  strategies.py  test_cell.py  test_cli.py  test_commands.py  test_files.py  test_kpoints.py  test_pseudopotentials.py  test_qei_to_json.py  test_utils.py  userconfig
unfolding_interpolation_code/: README  TODO  input_ui_template.json  inputfile.py  interpolate.py  manual.py  modules.py  parser.py  read_data.py  unf_int.py  wannier_map.py  write_data.py  write_results.py
wannier_interpolation/: modules.py  read_data.py  wannier_map.py  write_data.py
workflows/: utils.py
(+12464 files in other folders)
