[project]
name = "koopmans"
version = "1.1.0"
description = "Koopmans spectral functional calculations with python and Quantum ESPRESSO"
readme = "README_pypi.rst"
requires-python = ">=3.10"
authors = [
    { name = "Edward Linscott", email = "edward.linscott@epfl.ch" },
    { name = "Riccardo De Gennaro", email = "riccardo.degennaro@epfl.ch" },
    { name = "Nicola Colonna", email = "nicola.colonna@psi.ch" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.5.1",
    "scipy>=1.15.0",
    "numpy>=1.21",
    "argparse>=1.1",
    "pandas>=1.0.0",
    "typing>=3.6",
    "pybtex>=0.24",
    "spglib>=1.9",
    "upf-tools>=0.1.9",
    "ase-koopmans==0.1.11",
    "scikit-learn>=1.0",
    "deepdiff>=5.8.1",
    "pydantic>=2.7.0",
    "dill>=0.3.8",
    "tabulate==0.9.0",
]

[project.urls]
homepage = "https://koopmans-functionals.org/"
repository = "https://github.com/epfl-theos/koopmans"
google-group = "https://groups.google.com/g/koopmans-users"

[project.optional-dependencies]
test = [
    "codecov>=2.0",
    "coverage>=4.4",
    "hypothesis>=6.0.0",
    "pytest>=5.4",
    "pytest-cov>=2.9",
    "types-PyYAML==6.0.12.20241230",
    "pytest-console-scripts==1.4.1",
    "pytest-dependency==0.6.0",
]
docs = [
    "sphinx>=3.0",
    "sphinxcontrib-bibtex>=2.1.4",
    "sphinx_toolbox>=2.5.0",
    "sphinx_rtd_theme>=1.0.0",
    "recommonmark>=0.7.1",
    "numpydoc>=1.4.0",
    "sphinx-pyproject>=0.1.0",
    "myst-parser>=3.0.0",
]
lint = [
    "pylint",
    "flake8",
]

[project.scripts]
koopmans = "koopmans.cli.main:main"

[tool.pylint]
   max-line-length = 120
   fail-on = ["W4901", "W4902", "W4903", "W4904", "W4905", "W4906", "W6001"]

[tool.flake8]
   max-line-length=120
   ignore = [
      "D105",
      "D107",
      "W503",
      "E741",
      "A003",
      "A005",
   ]
   per-file-ignores = """
      tutorials/**/*.py: E402
   """

[tool.mypy]
   ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Could not find 2nd order Makov-Payne energy; applying first order only:UserWarning",
    "ignore:Martyna-Tuckerman corrections not applied for an aperiodic calculation; do this with caution:UserWarning",
    "ignore:Makov-Payne corrections are not being used; do this with caution for periodic systems:UserWarning",
    "ignore:`eps_inf` missing in input; it will default to 1.0. Proceed with caution for periodic systems:UserWarning",
    "ignore:Some of the pseudopotentials do not have `PP_PSWFC` blocks, which means a projected DOS calculation is not possible. Skipping...:UserWarning",
    "ignore:Neither a pseudopotential library nor a list of pseudopotentials was provided; defaulting to `sg15_v1.2`:UserWarning",
    "ignore:The screening parameters for a KI calculation with no empty states will converge instantly; to save computational time set alpha_numsteps == 1:UserWarning",
    "ignore:The screening parameters have been calculated but are not necessarily self-consistent. You may want to increase `alpha_numsteps` to obtain a more accurate result.:UserWarning",
    "ignore:This system is not cubic and will therefore not have a uniform dielectric tensor. However, the image-correction schemes that are currently implemented assume a uniform dielectric. Proceed with caution:UserWarning",
    'ignore:Small box parameters `nrb` not provided in input:UserWarning',
    'ignore:The computed screening parameter is greater than 1. Proceed with caution.:UserWarning',
    'ignore:Predicting screening parameters with machine-learning is an experimental feature; proceed with caution:UserWarning',
    'error::DeprecationWarning:koopmans',
    'error::DeprecationWarning:ase_koopmans',
]
addopts = "--show-capture=no --capture=sys --strict-markers --tb=short -rfEs --basetemp=tests/tmp"
markers = [
    "espresso: tests that check Quantum ESPRESSO",
    "tutorials: tests that run the tutorial exercises",
]
